package chat;

import java.util.List;

/** Mediator placeholder. */
public class ChatServer {
    public void register(User user) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    public void unregister(User user) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    public boolean hasUser(String username) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    public void deliver(User sender, List<User> recipients, String content) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    public void block(User blocker, User target) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    public void undoLast(User user) {
        throw new UnsupportedOperationException("Not implemented yet");
    }
}
